# AI_projects_backup

./: .gitignore  GEMINI.md  GEMINI2.md
Inventory_Management_System/: LICENSE  Main.py  README.md  app.py  database.py  inventory.csv  inventory.py  key.json  project.py  scanner.py  test.py  upload-files.py
Mid_project/: Mid_project.xlsx  Mid_projectdata.xlsx  Mid_projectdata좌표.xlsx  README.md  Report.csv  Report.xlsx  [경기_전처리_완]월별구분지역구분.xlsx  all_maps.html  combined.xlsx  gyeonggi_protect_polygons.geojson  mid_ln.py  mid_ln_test.py  mid_project_3 map.ipynb  mid_project_3.ipynb  mid_project_map.ipynb  num.xlsx  project2_2.py  total_test.csv  total_test.xlsx  total좌표.xlsx  경기_2022('세'제거,어린이보호구역표시).xlsx  서울어린이보호구역 위치도.json  어린이집현황좌표.xlsx
N.E.K.O-main/: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.MD  build_frontend.bat  build_frontend.sh  pyproject.toml  pytest.ini  requirements.txt
N.E.K.O-main/plugin/plugins/galgame_plugin/training/: __init__.py  pyproject.toml
N.E.K.O-main/plugin/plugins/galgame_plugin/training/classify/: __init__.py  config.yaml  eval.py  export_onnx.py  model.py  phase1_acceptance.py  train.py
N.E.K.O-main/plugin/plugins/galgame_plugin/training/data/: __init__.py  collect_screenshots.py  dataset.py  label_studio_export.py
N.E.K.O-main/plugin/plugins/galgame_plugin/training/shared/: __init__.py  augment.py  metrics.py
N.E.K.O-main/plugin/plugins/galgame_plugin/training/tests/: test_export_onnx.py  test_phase1_acceptance.py
clol/: food.xlsx  ju.ipynb  naver_selenium_Code.py  (+5 more)
(+1893 files in other folders)
