[project]
name = "game-companion-training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0,<1.24.0",
    "opencv-python-headless>=4.8.0",
    "albumentations>=1.3.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.17.0,<1.24.0"]
directml = ["onnxruntime-directml>=1.17.0,<1.24.0"]
